@@ -1,3 +1,8 @@
+Tue May 28 00:36:55 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_lookup.c (dblookup): Check the MATCH_CASE flag in the
+	  case of a single entry as well as multiple entries.
+
 Mon May 27 23:57:26 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* lib/hashtable.c, lib/hashtable.h: New files, containing the
